...
            ),
          );
        }
      },
      child: Scaffold(
        appBar: AppBar(
          title: Text(widget.isEditMode ? 'Edit Event' : 'Add Event'),
          actions: [
            if (widget.isEditMode)
              BlocBuilder<TimelineEventCubit, TimelineEventState>(
                builder: (context, state) {
                  if (state.status == TimelineEventStatus.ready &&
                      state.event != null) {
...
                          onPressed: isSaving
                              ? null
                              : () => _pickAttachmentPhoto(
                                    EventPhotoSource.file,
                                  ),
                          icon: const Icon(Icons.attach_file),
                          label: const Text('File'),
                        ),
                      ],
                    ),
                    const SizedBox(height: 24),
                    FilledButton(
                      onPressed: isSaving ? null : _saveEvent,
...
